# demo-realtime

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bot.yaml  build.yml  code-style.yml  pytest.yaml  pytest.yml  stubs.yaml
data/: dsi-24-raw.fif
demo_nfb/: __init__.py  fft.py  nfb.py
demo_nfb/commands/: demo_nfb.py
demo_nfb/utils/: _docs.py
demo_nfb/visuals/: __init__.py  _visual.py  cross.py  filling_bar.py  moving_bar.py  text.py
demo_realtime/: __init__.py  __init__.pyi  _bci_EEGNet.py  bci_motor_decoding.py  conftest.py  fft.py  nfb.py  nfb_double_spinning_wheel.py  nfb_double_spinning_wheel.pyi  nfb_filling_bar.py  nfb_filling_bar.pyi  nfb_fillingbar.py  rt_topomap.py  rt_topomap.pyi  topomap.py
demo_realtime/bci/: __init__.py  __init__.pyi  _bci_EEGNet.py  _bci_EEGNet.pyi  _calibration.py  _config.py  _config.pyi  _fit.py  _online.py  bci_motor_decoding.py  calibration.py  calibration.pyi  fit.py  fit.pyi  online.py  online.pyi
demo_realtime/bci/data/: online-raw.fif
demo_realtime/bci/tests/: test_bci_EEGNet.py  test_calibration.py
demo_realtime/commands/: demo_bci.py  demo_nfb.py  demo_topomap.py  sys_info.py
demo_realtime/feedbacks/: __init__.py  _car_game.py  car_game.py  double_spinning_wheel.py  topomap.py
demo_realtime/feedbacks/tests/: test_car_game.py  test_double_spinning_wheel.py  test_topomap.py
demo_realtime/metrics/: __init__.py  __init__.pyi  bandpower.py  bandpower.pyi
demo_realtime/metrics/tests/: test_bandpower.py
demo_realtime/resources/bci_motor_decoding-model-mscheltienne/: fingerprint.pb  keras_metadata.pb  saved_model.pb
demo_realtime/resources/bci_motor_decoding-model-mscheltienne/variables/: variables.data-00000-of-00001  variables.index
demo_realtime/tests/: test_bci_EEGNet.py
demo_realtime/utils/: __init__.py  _checks.py  _checks.pyi  _config.py  _docs.py  _tests.py  config.py  config.pyi  fft.py  logs.py  logs.pyi  viz.py
demo_realtime/utils/tests/: test_logs.py
demo_realtime/visuals/: __init__.py  __init__.pyi  _bci_motor_decoding.py  _bci_motor_decoding.pyi  _car_game.py  _car_game.pyi  car_game.py  car_game.pyi  double_spinning_wheel.py  double_spinning_wheel.pyi  topomap.py  topomap.pyi
demo_realtime/visuals/tests/: test_car_game.py  test_double_spinning_wheel.py  test_topomap.py
scripts/: demo-bci-cargame.py
tools/: stubgen.py
