[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'demo_realtime'
version = '0.1.0'
description = 'Demo for realtime projects.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'brain',
    'neurofeedback',
    'neuroimaging',
    'neuroscience',
    'python',
    'real-time',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'bsl>=0.4.0, <1.0.0',
    'numpy>=1.21',
    'psutil',
    'stimuli',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
]
all = [
    'demo_realtime[style]',
    'demo_realtime[test]',
    'demo_realtime[build]',
]
full = [
    'demo_realtime[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/demo-realtime'
documentation = 'https://github.com/mscheltienne/demo-realtime'
source = 'https://github.com/mscheltienne/demo-realtime'
tracker = 'https://github.com/mscheltienne/demo-realtime/issues'

[project.scripts]
demo-sys_info = 'demo_realtime.commands.sys_info:run'
demo-nfb = 'demo_realtime.commands.demo_nfb:run'
demo-topomap = 'demo_realtime.commands.demo_topomap:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['demo_realtime*']
exclude = ['demo_realtime*tests']

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 38
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^demo_realtime.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/demo_realtime/_version.py',
    '**/demo_realtime/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
