[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'bsl==0.5.2',
  'matplotlib',
  'mne-lsl>=1.3',
  'mne>=1.6',
  'numpy>=1.21',
  'packaging',
  'psutil',
  'scipy',
]
description = 'Demo for realtime projects.'
keywords = [
  'brain',
  'labstreaminglayer',
  'lsl',
  'neurofeedback',
  'neuroimaging',
  'neuroscience',
  'python',
  'real-time',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'demo_realtime'
readme = 'README.md'
requires-python = '>=3.10'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'demo_realtime[bci]',
  'demo_realtime[build]',
  'demo_realtime[nfb]',
  'demo_realtime[stubs]',
  'demo_realtime[style]',
  'demo_realtime[test]',
]
bci = [
  'psychopy',
  'scikit-learn>=1.4.0',
  'tensorflow; python_version <= "3.11"',
]
build = [
  'build',
  'twine',
]
full = [
  'demo_realtime[all]',
]
nfb = [
  'psychopy',
  'stimuli',
]
stubs = [
  'mypy',
  'ruff>=0.1.8',
  'ursina',
]
style = [
  'codespell[toml]>=2.2.4',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
  'tensorflow; python_version <= "3.11"',
]

[project.scripts]
demo-bci = 'demo_realtime.commands.demo_bci:run'
demo-nfb = 'demo_realtime.commands.demo_nfb:run'
demo-sys_info = 'demo_realtime.commands.sys_info:run'
demo-topomap = 'demo_realtime.commands.demo_topomap:run'

[project.urls]
documentation = 'https://github.com/fcbg-platforms/demo-realtime'
homepage = 'https://github.com/fcbg-platforms/demo-realtime'
source = 'https://github.com/fcbg-platforms/demo-realtime'
tracker = 'https://github.com/fcbg-platforms/demo-realtime/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,*.pb'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
concurrency = [
  'multiprocessing',
]
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/demo_realtime/_version.py',
  '**/demo_realtime/commands/*',
  '**/demo_realtime/resources/*',
  '**/demo_realtime/utils/_fixes.py',
  '**/demo_realtime/visuals/resources/*',
  '**/tests/**',
]
parallel = true

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'demo_realtime/resources',
  'demo_realtime/visuals/resources',
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100', # 'Missing docstring in public module'
  'D104', # 'Missing docstring in public package'
  'D107', # 'Missing docstring in __init__'
]
'*.pyi' = ['E501', 'F811']
'__init__.py' = ['F401']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["demo_realtime.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
'demo_realtime' = ['resources/*']
'demo_realtime.visuals' = ['resources/*.png']

[tool.setuptools.packages.find]
exclude = ['demo_realtime*tests']
include = ['demo_realtime*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
